25-nginx-ingress/99-Service-ingress.yaml
# This manifest if for reference.  It is neeeded if running on MicroK8s.
# The manifest creates a service with a fixed IP for use by all ingresses deployed on
# the MicroK8s cluster.

# Create a MetalLB Load Balancer for the Kubernetes Ingress:
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  # loadBalancerIP is optional. MetalLB will automatically allocate an IP 
  # from its pool if not specified. You can also specify one manually.
  loadBalancerIP: 192.168.3.33
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
